--- a/sing.html
+++ b/sing.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\css\sing.css">
+        <link rel="stylesheet" href="S.A\css\sing.css">
         <title>INSCRIPTION</title>
     </head>
     
