--- a/produits/produits.html
+++ b/produits/produits.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Ebène Boutique</title>
-        <link rel="stylesheet" href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\produits\produits.css\produits.css">
+        <link rel="stylesheet" href="S.A\produits\produits.css\produits.css">
     </head>
     <body>
 
