--- a/about/about.html
+++ b/about/about.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="S.A\about\about.css\about.css">
+        <link rel="stylesheet" href="css/about.css">
         <title>Ebène Boutique</title>
     </head>
 
     <body>
         <ul>
-            <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\index.html">Accueil</a></li>
-            <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\produits\produits.html" style="color: black;">Produits</a></li>
-            <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\about\about.html" style="color: black;">À propos</a></li>
-            <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\contacts.html" style="color: black;">Contacts</a></li>
-            <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\sing.html" style="color: black;">Inscrivez-vous</a></li>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="produits\produits.html" style="color: black;">Produits</a></li>
+            <li><a href="about\about.html" style="color: black;">À propos</a></li>
+            <li><a href="contacts.html" style="color: black;">Contacts</a></li>
+            <li><a href="sing.html" style="color: black;">Inscrivez-vous</a></li>
             <li><i class="fa fa-shopping-bag" aria-hidden="true" style="font-size: 20px;"></i>
             </li>
         </ul>
