--- a/contacts.html
+++ b/contacts.html
@@ -59,11 +59,11 @@
 
         <div>
             <ul>
-                <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\index.html">Accueil</a></li>
-                <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\produits\produits.html" style="color: black;">Produits</a></li>
-                <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\about\about.html" style="color: black;">À propos</a></li>
-                <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\contacts.html" style="color: black;">Contacts</a></li>
-                <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\sing.html" style="color: black;">Inscrivez-vous</a></li>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="produits\produits.html" style="color: black;">Produits</a></li>
+                <li><a href="about\about.html" style="color: black;">À propos</a></li>
+                <li><a href="contacts.html" style="color: black;">Contacts</a></li>
+                <li><a href="sing.html" style="color: black;">Inscrivez-vous</a></li>
                 <li><i class="fa fa-shopping-bag" aria-hidden="true" style="font-size: 20px;"></i>
                 </li>
                 
