--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="S.A\css\style.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Ebène Boutique</title>
     </head>
@@ -12,11 +12,11 @@
             <nav class="navbar">
                 <h1 class="titre">Ebène Boutique</h1>
                 <ul>
-                    <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\index.html">Accueil</a></li>
-                    <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\produits\produits.html" style="color: black;">Produits</a></li>
-                    <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\about\about.html" style="color: black;">À propos</a></li>
-                    <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\contacts.html" style="color: black;">Contacts</a></li>
-                    <li><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\sing.html" style="color: black;">Inscrivez-vous</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="produits\produits.html" style="color: black;">Produits</a></li>
+                    <li><a href="about\about.html" style="color: black;">À propos</a></li>
+                    <li><a href="contacts.html" style="color: black;">Contacts</a></li>
+                    <li><a href="sing.html" style="color: black;">Inscrivez-vous</a></li>
                     <li><i class="fa fa-shopping-bag" aria-hidden="true" style="font-size: 20px;"></i>
                     </li>
                     
@@ -26,7 +26,7 @@
 
 
         <section class="s">
-            <button type="button" class="boutton"><a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\produits\produits.html">Explorez notre Boutique <i class="fa fa-arrow-right" aria-hidden="true" style="font-size: 15px;"></i>
+            <button type="button" class="boutton"><a href="produits\produits.html">Explorez notre Boutique <i class="fa fa-arrow-right" aria-hidden="true" style="font-size: 15px;"></i>
             </a></button>
         </section>
 
@@ -180,7 +180,7 @@
 
         <section class="sa">
             <div class="saa">
-                <button class="sab" type="button"> <a href="C:\Users\fm005\OneDrive\Desktop\Gomycode\S.A\produits\produits.html">Acheter le maintenant</a>
+                <button class="sab" type="button"> <a href="produits\produits.html">Acheter le maintenant</a>
                     <i class="fa fa-cart-arrow-down" aria-hidden="true" style="font-size: 20px;"></i>
                 </button>
             </div>
